<resources>
    <string name="app_name">PCS</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="action_about">About</string>
    <string name="action_signout">Sign Out</string>

    <string name="sync_pref">Sync</string>

    <string name="sync_pref_summary">Get your photos, videos, contacts, subscription etc on all your devices.</string>

    <string name="pref_syncConnectionType">Sync Connection Types</string>

    <string name="pref_syncConnectionType_dialog_title">Perform Sync Using</string>

    <string name="pref_syncConnectionType_default_value">WIFI</string>

    <string name="pref_syncConnectionType_summary">WIFI</string>

    <string-array name="pref_syncConnectionType_entries">

        <item>WIFI</item>

        <item>Mobile Data</item>

        <item>WIFI/Mobile Data</item>

    </string-array>

    <string-array name="pref_syncConnectionType_entriesvalues">

        <item>WIFI</item>

        <item>Mobile Data</item>

        <item>WIFI/Mobile Data</item>

    </string-array>

    <string-array name="timerList">

        <item>After 5 seconds</item>
        <item>After 10 seconds</item>
        <item>After 15 seconds</item>
        <item>After 20 seconds</item>

    </string-array>

    <string-array name="timerListValues">

        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>

    </string-array>

    <string name="invalid_name">Fill the name</string>
    <string name="invalid_email">Invalid Email address</string>
    <string name="invalid_email1">Email can\'t Empty</string>
    <string name="invalid_carnumber">Car_number can\'t empty</string>
    <string name="invalid_timer">Time can\'t empty</string>


</resources>
